# yaramo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
model/: __init__.py  edge.py  node.py  signal.py
railway_model/: __init__.py  edge.py  geonode.py  node.py  signal.py
test/: helper.py  node_test.py  point_test.py  split_test.py  test_node.py  topology_test.py  union_test.py
tests/: test_node.py  topologies.py
tests/topologies/: straight_track.pickle  switch.pickle
yaramo/: additional_signal.py  base_element.py  edge.py  geo_node.py  geo_point.py  geonode.py  model.py  node.py  point.py  route.py  signal.py  topology.py  trip.py  utils.py  vacancy_section.py
yaramo/operations/: __init__.py  split.py  union.py
