[tool.poetry]
name = "yaramo"
version = "0.1.0"
description = "yaramo is a railway model focusing on interoperability between different existing planning formats."
authors = [""OSM HPI <OSM@HPI>""]
readme = "README.md"
packages = [{include = "yaramo"}]

[tool.poetry.dependencies]
python = "^3.10"
pyproj = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
